<resources>
    <string name="app_name">Jake</string>

    <string name="loading">LOADING .. </string>
    <string name="gust">GUEST</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="FName">First Name</string>
    <string name="LName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Phone">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">ConFirm Password</string>
    <string name="signup">SIGN UP</string>
    <string name="signin">LOGIN</string>
    <string name="Or">OR</string>
    <string name="Forget_password">Register</string>
    <string name="chooseservice">Choose Service</string>
    <string name="price">Price</string>
    <string name="ordr">Order</string>
    <string name="showprice">Get Price</string>
    <string name="address">Address</string>
    <string name="ShowOrders">Show Orders</string>
    <string name="Direction">Direction</string>
    <string name="action_settings">Settings</string>
    <string name="servicerequest">Order Now</string>
    <string name="home">Home</string>
    <string name="Accessories">Accessories</string>
    <string name="charges">spare parts</string>
    <string name="search"> Sٍٍٍearch Here</string>
    <string name="facebook_app_id">364878227631964</string>
    <string name="notes">Other Issue Descroption</string>
    <string name="maintenenceorder">Orders Maintenance</string>
    <string name="shoporder">Order Shop</string>
    <string name="Logout">Log out</string>
    <string name="invalidemail">Invalid Email Or Password</string>
    <string name="Profile">Profile</string>
    <string name="cart">Add To Cart</string>
    <string name="rquestorder">Request Order</string>
    <string name="requestedsuccfuly">Thank you for your order</string>
    <string name="Name">Name</string>
    <string name="discrp">Discrption</string>
    <string name="tybe">tybe</string>
    <string name="spare">Spare</string>
    <string name="Color">Color</string>
    <string name="Issue">Issue</string>
    <string name="Note">Note</string>
    <string name="Date">Date</string>
    <string name="internet">Turn on Internet</string>
    <string name="addcart">Add to Cart</string>
    <string name="noorders">No Orders For you</string>
    <string name="orderid">Order id</string>
    <string name="profile">Profile</string>
    <string name="offers">Offers</string>
    <string name="mycart">My Cart</string>
    <string name="more">Setting</string>
    <string name="name">Name </string>
    <string name="email">Email</string>
    <string name="mobile">Phone</string>
    <string name="myorders">My Orders</string>
    <string name="view">View</string>
    <string name="language">Language</string>
    <string name="logout">Log Out</string>
    <string name="featureproduct">Feature Products</string>
    <string name="phones">Phones</string>
    <string name="setting">Setting</string>
    <string name="add">Add</string>
    <string name="recomended">We Have Recommended Some  Feature Product For you</string>
    <string name="total">Total</string>
    <string name="guest">CONTINUE AS GUEST</string>
    <string name="offersfor">Offers Only for you</string>
    <string name="selected">We have selected some products only for you</string>
    <string name="adde">Add</string>
    <string name="insertemail">please insert Coorect EMail</string>
    <string name="insertpassword">please insert Password</string>
    <string name="insertconfirmpassword">please insert ConFirm Password</string>
    <string name="insertfirstname">please insert First Name</string>
    <string name="insertlastname">please insert Last Name</string>
    <string name="insertphone">please insert Phone</string>
    <string name="minpas">password must be more than 8 letter</string>
    <string name="notmatch">Password Not Match ConFirm Password</string>
    <string name="cartsuccesfull">The product has been added To Cart</string>
    <string name="noproducts">No Products Found</string>
    <string name="city">City</string>
    <string name="done">Done</string>
    <string name="productexist">Product already exists In Your Cart</string>
    <string name="status">Status</string>
    <string name="usernotlogin">Please Login First</string>
    <string name="resetpass">Reset Password ?</string>
    <string name="reset">Reset</string>
    <string name="passwordsend">Password Send To Your Email Success</string>
    <string name="alreadyexistemail">This Email Already Exist</string>

    <string name="editprofile">Edit </string>
    <string name="updatedusersuccess">User Info Updated Success</string>
    <string name="productunavialble">Out of Stock </string>
    <string name="nomorestock">There is No More Quantity In a Stoke</string>
    <string name="productsdetails">Product Details</string>
</resources>
