<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:id="@+id/Profile_Frame"
    tools:context="ikon.ikon.Fragments.Profile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bar"
            android:background="@color/transparent"
            app:popupTheme="@style/PopupOverlay">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarnavigation"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#365f93">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/T_Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="#fff"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/profile"
                        />

                </RelativeLayout>


            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>

        <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@+id/bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/backgroundprofile"
        android:id="@+id/names"
        android:layout_below="@+id/imageView"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp">


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/T_Name"
            android:text="@string/name"
            android:textColor="#8b99a3"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textSize="18sp"
            android:textStyle="bold" />

    <EditText
        android:id="@+id/T_Name"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_toRightOf="@+id/name"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:textSize="16sp"
        android:maxLength="30"
        android:maxLines="1"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="#afb8bf"
        />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/backgroundprofile"
        android:id="@+id/emails"
        android:layout_below="@+id/names"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp">
    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#8b99a3"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textSize="18sp"
        android:maxLines="1"
        android:layout_centerVertical="true"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/E_Email"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_20sdp"
        android:textColor="#afb8bf"
        android:textSize="16sp"
        android:layout_toRightOf="@+id/Email"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_centerVertical="true"
        />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/backgroundprofile"
        android:id="@+id/mobiles"
        android:layout_below="@+id/emails"
        android:layout_marginRight="@dimen/_20sdp"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp">
    <TextView
        android:id="@+id/ModileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textColor="#8b99a3"
        android:layout_centerVertical="true"
        android:textSize="18sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/T_ModileNumber"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_20sdp"
        android:textColor="#afb8bf"
        android:maxLines="1"
        android:maxLength="11"
        android:inputType="number"
        android:textSize="16sp"
        android:layout_toRightOf="@+id/ModileNumber"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:background="@android:color/transparent"
        />
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/mobiles"
            android:background="@drawable/backgroundprofile"
            android:id="@+id/myOrde"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myorders"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textStyle="bold"
                android:textColor="#8b99a3"
                android:layout_alignParentLeft="@+id/profile_view"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/profile_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColor="#afb8bf"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>
        <Button
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/backgroundaddcart"
            android:layout_below="@+id/myOrde"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/editprofile"
            android:id="@+id/Edit_Profile"
            android:textAllCaps="false"
            android:visibility="visible"
            />
        <ProgressBar
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:id="@+id/progrossprofileedit"
            android:visibility="gone"
            />
    </RelativeLayout>
    </ScrollView>
</FrameLayout>
